--- a/configure.in
+++ b/configure.in
@@ -4654,6 +4654,7 @@ then
 	plugin_nfs="yes"
 	plugin_uptime="yes"
 	plugin_zfs_arc="yes"
+	plugin_processes="yes"
 fi
 
 if test "x$with_devinfo$with_kstat" = "xyesyes"
