Applied patch perfwatcher_addons against 5.2.0

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1376,7 +1376,7 @@ dist_man_MANS = collectd.1 \
 
 #collectd_1_SOURCES = collectd.pod
 
-EXTRA_DIST = types.db pinba.proto
+EXTRA_DIST = types.db types-perfwatcher.db pinba.proto
 
 EXTRA_DIST +=   collectd.conf.pod \
 		collectd-email.pod \
@@ -1424,11 +1424,13 @@ install-exec-hook:
 	fi; \
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
 	$(INSTALL) -m 0644 $(srcdir)/types.db $(DESTDIR)$(pkgdatadir)/types.db;
+	$(INSTALL) -m 0644 $(srcdir)/types-perfwatcher.db $(DESTDIR)$(pkgdatadir)/types-perfwatcher.db;
 	$(INSTALL) -m 0644 $(srcdir)/postgresql_default.conf \
 		$(DESTDIR)$(pkgdatadir)/postgresql_default.conf;
 
 uninstall-hook:
 	rm -f $(DESTDIR)$(pkgdatadir)/types.db;
+	rm -f $(DESTDIR)$(pkgdatadir)/types-perfwatcher.db;
 	rm -f $(DESTDIR)$(sysconfdir)/collectd.conf
 	rm -f $(DESTDIR)$(pkgdatadir)/postgresql_default.conf;
 
