--- a/configure.in
+++ b/configure.in
@@ -1480,6 +1480,29 @@ then
 fi
 # }}}
 
+# --with-jsonrpc_topps {{{
+# Enable or not the topps jsonrpc callbacks
+AC_ARG_WITH(jsonrpc_topps,
+	      [AS_HELP_STRING([--with-jsonrpc_topps], [Enable topps callbacks for jsonrpc plugin (default=yes)])],
+[
+ if test "x$withval" = "xyes"
+ then
+	 with_jsonrpc_topps="yes"
+ else if test "x$withval" = "xno"
+ then
+	 with_jsonrpc_topps="no"
+ else
+	 with_jsonrpc_topps="yes"
+ fi; fi
+],
+[with_jsonrpc_topps="yes"])
+if test "x$with_jsonrpc_topps" = "xyes"
+then
+	AC_DEFINE(JSONRPC_USE_TOPPS,        1, [Define to enable jsonrpc topps callbacks.])
+	AM_CONDITIONAL(BUILD_JSONRPC_USE_TOPPS, test "x$with_jsonrpc_topps" = "xyes")
+fi
+# }}}
+
 # --with-libmicrohttpd {{{
 AC_ARG_WITH(libmicrohttpd, [AS_HELP_STRING([--with-libmicrohttpd@<:@=PREFIX@:>@], [Path to libmicrohttpd.])],
 [
@@ -5067,6 +5090,7 @@ AC_PLUGIN([java],        [$with_java],         [Embed the Java Virtual Machine])
 AC_PLUGIN([jsonrpc],     [$plugin_jsonrpc],    [Json-RPC communication plugin])
 AC_PLUGIN([jsonrpc_base],         [$with_jsonrpc_base],         [Json-RPC : base])
 AC_PLUGIN([jsonrpc_perfwatcher],  [$with_jsonrpc_perfwatcher],  [Json-RPC : perfwatcher helpers])
+AC_PLUGIN([jsonrpc_topps],  [$with_jsonrpc_topps],  [Json-RPC : topps helpers])
 AC_PLUGIN([libvirt],     [$plugin_libvirt],    [Virtual machine statistics])
 AC_PLUGIN([load],        [$plugin_load],       [System load])
 AC_PLUGIN([logfile],     [yes],                [File logging plugin])
@@ -5406,6 +5430,7 @@ Configuration:
     jsonrpc . . . . . . . $enable_jsonrpc
     jsonrpc_base  . . . . $enable_jsonrpc_base
     jsonrpc_perfwatcher . $enable_jsonrpc_perfwatcher
+    jsonrpc_topps . . . . $enable_jsonrpc_topps
     libvirt . . . . . . . $enable_libvirt
     load  . . . . . . . . $enable_load
     logfile . . . . . . . $enable_logfile
