jsonrpc_cb_topps_get_top implemented

--- a/configure.in
+++ b/configure.in
@@ -3024,6 +3024,60 @@ fi
 AM_CONDITIONAL(BUILD_WITH_LIBOPING, test "x$with_liboping" = "xyes")
 # }}}
 
+# --with-libz {{{
+AC_ARG_WITH(libz, [AS_HELP_STRING([--with-libz@<:@=PREFIX@:>@], [Path to libz.])],
+[
+ if test "x$withval" = "xyes"
+ then
+	 with_libz="yes"
+ else if test "x$withval" = "xno"
+ then
+	 with_libz="no"
+ else
+	 with_libz="yes"
+	 LIBZ_CPPFLAGS="$LIBZ_CPPFLAGS -I$withval/include"
+	 LIBZ_LDFLAGS="$LIBZ_LDFLAGS -L$withval/lib"
+ fi; fi
+],
+[with_libz="yes"])
+
+SAVE_CPPFLAGS="$CPPFLAGS"
+SAVE_LDFLAGS="$LDFLAGS"
+
+CPPFLAGS="$CPPFLAGS $LIBZ_CPPFLAGS"
+LDFLAGS="$LDFLAGS $LIBZ_LDFLAGS"
+
+if test "x$with_libz" = "xyes"
+then
+	if test "x$LIBZ_CPPFLAGS" != "x"
+	then
+		AC_MSG_NOTICE([libz CPPFLAGS: $LIBZ_CPPFLAGS])
+	fi
+	AC_CHECK_HEADERS(zlib.h,
+	[with_libz="yes"],
+	[with_libz="no (zlib.h not found)"])
+fi
+if test "x$with_libz" = "xyes"
+then
+	if test "x$LIBZ_LDFLAGS" != "x"
+	then
+		AC_MSG_NOTICE([libz LDFLAGS: $LIBZ_LDFLAGS])
+	fi
+fi
+
+CPPFLAGS="$SAVE_CPPFLAGS"
+LDFLAGS="$SAVE_LDFLAGS"
+
+if test "x$with_libz" = "xyes"
+then
+	BUILD_WITH_LIBZ_CPPFLAGS="$LIBZ_CPPFLAGS"
+	BUILD_WITH_LIBZ_LDFLAGS="$LIBZ_LDFLAGS"
+	AC_SUBST(BUILD_WITH_LIBZ_CPPFLAGS)
+	AC_SUBST(BUILD_WITH_LIBZ_LDFLAGS)
+fi
+AM_CONDITIONAL(BUILD_WITH_LIBZ, test "x$with_libz" = "xyes")
+# }}}
+
 # --with-oracle {{{
 with_oracle_cppflags=""
 with_oracle_libs=""
