--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -523,8 +523,8 @@ if BUILD_PLUGIN_JSONRPC
 pkglib_LTLIBRARIES += jsonrpc.la
 jsonrpc_la_SOURCES = jsonrpc.c jsonrpc.h
 jsonrpc_la_LDFLAGS = -module -avoid-version $(BUILD_WITH_LIBMICROHTTPD_LDFLAGS) $(BUILD_WITH_LIBJSON_LDFLAGS)
-jsonrpc_la_CFLAGS = $(AM_CFLAGS) $(BUILD_WITH_LIBMICROHTTPD_CPPFLAGS) $(BUILD_WITH_LIBJSON_CPPFLAGS)
-jsonrpc_la_LIBADD = $(BUILD_WITH_LIBMICROHTTPD_LIBS) $(BUILD_WITH_LIBJSON_LIBS)
+jsonrpc_la_CFLAGS = $(AM_CFLAGS) $(BUILD_WITH_LIBMICROHTTPD_CPPFLAGS) $(BUILD_WITH_LIBJSON_CPPFLAGS) $(BUILD_WITH_LIBCRYPT_CFLAGS)
+jsonrpc_la_LIBADD = $(BUILD_WITH_LIBMICROHTTPD_LIBS) $(BUILD_WITH_LIBJSON_LIBS) $(BUILD_WITH_LIBCRYPT_LIBS)
 collectd_LDADD += "-dlopen" jsonrpc.la
 collectd_DEPENDENCIES += jsonrpc.la
 if BUILD_JSONRPC_USE_BASE
