--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
+AC_PREREQ([2.60])
 AC_INIT(collectd, [m4_esyscmd(./version-gen.sh)])
+AC_USE_SYSTEM_EXTENSIONS
 AC_CONFIG_SRCDIR(src/collectd.c)
 AC_CONFIG_HEADERS(src/config.h)
 AC_CONFIG_AUX_DIR([libltdl/config])
