--- a/src/collectd.conf.in
+++ b/src/collectd.conf.in
@@ -145,6 +145,7 @@
 #@BUILD_PLUGIN_POSTGRESQL_TRUE@LoadPlugin postgresql
 #@BUILD_PLUGIN_POWERDNS_TRUE@LoadPlugin powerdns
 #@BUILD_PLUGIN_PROCESSES_TRUE@LoadPlugin processes
+#@BUILD_PLUGIN_PROCNETSTAT_TRUE@LoadPlugin procnetstat
 #@BUILD_PLUGIN_PROTOCOLS_TRUE@LoadPlugin protocols
 #@BUILD_PLUGIN_PYTHON_TRUE@<LoadPlugin python>
 #@BUILD_PLUGIN_PYTHON_TRUE@  Globals true
@@ -832,6 +833,10 @@
 
 #<Plugin processes>
 #	Process "name"
+#</Plugin>
+
+#<Plugin procnetstat>
+#	ProcessMatch "name" "process regex" "local ip" <local port>
 #</Plugin>
 
 #<Plugin protocols>
