--- a/src/collectd.conf.in
+++ b/src/collectd.conf.in
@@ -453,6 +453,8 @@
 #   Authentication "Basic"
 #   Authfile "@prefix@/share/collectd/jsonrpc_passwd.txt"
 #   TopPsDataDir "/var/lib/collectd/top"
+#   RRDToolPath "/usr/bin/rrdtool"
+#   RRDCachedDaemonAddress "unix:/tmp/rrdcached.sock"
 #</Plugin>
 
 #<Plugin libvirt>
