Call build.sh script to setup the configure script when building from git source.
Similarly, call clean.sh for cleaning.

NOTE: There might be a more debian/dh way of doing that directly within
debian/rules, but this way makes use of the upstream scripts which is
probably easier to maintain.

--- a/debian/rules
+++ b/debian/rules
@@ -181,6 +181,10 @@ config.status: configure $(DPATCH_STAMPFN)
 		JAVA_LDFLAGS="$(JAVA_LDFLAGS)" \
 		|| ( status=$$?; cat config.log; exit $$status )
 
+configure:
+	dh_testdir
+	./build.sh
+
 build: build-arch build-indep
 build-arch: build-stamp
 build-indep: build-stamp
@@ -207,6 +211,7 @@ clean: unpatch
 	
 	dh_clean
 	debconf-updatepo
+	./clean.sh
 
 install-indep:
 	dh_testdir
