--- a/debian/control
+++ b/debian/control
@@ -45,7 +45,7 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  protobuf-c-compiler,
  python-dev,
 # necessary for -pw patched version
- libmicrohttpd-dev, libjson-c-dev, libjson0-dev
+ libmicrohttpd-dev, libjson-c-dev (>= 0.10), libjson0-dev
 Build-Conflicts: libpthread-dev, libhal-dev
 Standards-Version: 3.9.4
 Homepage: http://perfwatcher.org/
