renamed the option to CollectInternalStats; renamed 'internal' to 'collectd'; no more lock when not recording internal stats

--- a/src/collectd.conf.in
+++ b/src/collectd.conf.in
@@ -28,7 +28,7 @@
 # When enabled, some internal statistics are recorded as values              #
 # Disabled by default.                                                       #
 #----------------------------------------------------------------------------#
-#InternalStatistics false
+#CollectInternalStats false
 
 #----------------------------------------------------------------------------#
 # Interval at which to query values. This may be overwritten on a per-plugin #
